# sage

./: .gitignore  GNUmakefile.am  INSTALL  TODO  autogen.sh  configure.ac  deps.in  sage.in
m4/: ac_foreign.m4  (+1 more)
src/: README  (+5 more)
src/doc/: Makefile.am  configure.ac
src/doc/common/: build_options.py.in  builder.py  conf.py
src/doc/en/reference/: conf.py
src/sage/: .gitignore  00bare.sh.in  Makefile.am  TODO  all.py  autogen.sh  common.mk  config.py.in  configure.ac  cythoninit.in  env.py.in  module_list.py.in  setup.py.in
src/sage/algebras/: Makefile.am
src/sage/algebras/letterplace/: Makefile.am
src/sage/algebras/quatalg/: Makefile.am
src/sage/calculus/: Makefile.am  calculus.py
src/sage/categories/: Makefile.am
src/sage/categories/examples/: Makefile.am
src/sage/coding/: Makefile.am
src/sage/coding/codecan/: Makefile.am
src/sage/combinat/: Makefile.am
src/sage/combinat/crystals/: Makefile.am
src/sage/combinat/designs/: Makefile.am
src/sage/combinat/matrices/: Makefile.am
src/sage/combinat/root_system/: type_affine.py
src/sage/combinat/words/: Makefile.am
src/sage/crypto/: Makefile.am
src/sage/databases/: Makefile.am  cremona.py  sql_db.py
src/sage/dynamics/: Makefile.am
src/sage/ext/: Makefile.am  gen_interpreters.py  multi_modular.pxd  pselect.pyx  python_debug.pxi  solaris_fixes.h
src/sage/ext/interpreters/: Makefile.am
src/sage/finance/: Makefile.am
src/sage/functions/: Makefile.am  exp_integral.py
src/sage/game_theory/: Makefile.am
src/sage/games/: Makefile.am
src/sage/geometry/: Makefile.am  lattice_polytope.py  polytope.py
src/sage/geometry/polyhedron/: palp_database.py
src/sage/geometry/triangulation/: Makefile.am
src/sage/graphs/: Makefile.am  cl.h  clhack.c  graph_database.py  isgci.py
src/sage/graphs/base/: Makefile.am
src/sage/graphs/graph_decompositions/: Makefile.am
src/sage/graphs/modular_decomposition/: Makefile.am
src/sage/groups/: Makefile.am  finitely_presented.py  free_group.py  libgap_mixin.py  libgap_wrapper.pyx
src/sage/groups/matrix_gps/: Makefile.am  finitely_generated.py  group_element.py  matrix_group.py
src/sage/groups/perm_gps/: Makefile.am  permgroup.py
src/sage/groups/perm_gps/partn_ref/: Makefile.am
src/sage/groups/perm_gps/partn_ref2/: Makefile.am
src/sage/groups/semimonomial_transformations/: Makefile.am
src/sage/gsl/: Makefile.am
src/sage/homology/: Makefile.am
src/sage/interacts/: Makefile.am
src/sage/interfaces/: Makefile.am  gp.py  maxima.py  maxima_abstract.py  maxima_lib.py  qepcad.py  singular.py
src/sage/libs/: Makefile.am  all.py  ecl.pyx  libsageecm.pyx
src/sage/libs/coxeter3/: Makefile.am
src/sage/libs/cremona/: Makefile.am
src/sage/libs/flint/: Makefile.am  fmpq_poly.pxd
src/sage/libs/fplll/: Makefile.am  fplll.pxi
src/sage/libs/gap/: Makefile.am  element.pyx  gap.c  gap_includes.pxd  gasman.c  libGAPify.py  libgap.c  libgap.h  libgap.link  libgap.version  libgap_internal.h  libgap_wrap.h  libsagegap.pyx  scanner.c  sysfiles.c  util.pyx
src/sage/libs/gap/test/: Makefile  main.c
src/sage/libs/gmp/: types.pxd
src/sage/libs/lcalc/: Makefile.am
src/sage/libs/linbox/: Makefile.am
src/sage/libs/lrcalc/: Makefile.am  lrcalc.pxd
src/sage/libs/mpmath/: Makefile.am
src/sage/libs/mwrank/: Makefile.am
src/sage/libs/ntl/: Makefile.am
src/sage/libs/pari/: Makefile.am
src/sage/libs/singular/: Makefile.am  singular.pyxx
src/sage/libs/symmetrica/: Makefile.am
src/sage/matrix/: Makefile.am  matrix1.pyx  matrix_integer_dense.pxd  matrix_integer_sparse.pxd  matrix_modn_dense.pxd  matrix_modn_dense_double.pyx  matrix_modn_dense_template_header.pxi  matrix_window_modn_dense.pxd  misc.pyx
src/sage/matroids/: Makefile.am
src/sage/media/: Makefile.am
src/sage/misc/: Makefile.am  cython.py  edit_module.py  interpreter.py  package.py  sagedoc.py  sageinspect.py  session.pyx  trace.py
src/sage/modular/arithgroup/: Makefile.am  farey.cpp
src/sage/modular/modform/: Makefile.am
src/sage/modular/modsym/: Makefile.am
src/sage/modules/: Makefile.am  vector_modn_dense.pxd
src/sage/monoids/: Makefile.am
src/sage/numerical/: Makefile.am
src/sage/numerical/backends/: Makefile.am
src/sage/plot/: Makefile.am  misc.py  plot.py
src/sage/plot/plot3d/: Makefile.am  parametric_surface.pxd  platonic.py  plot3d.py
src/sage/quadratic_forms/: Makefile.am  quadratic_form__automorphisms.py
src/sage/quivers/: Makefile.am
src/sage/repl/: Makefile.am
src/sage/rings/: Makefile.am  arith.py  complex_double.pyx  complex_number.pyx  integer.pyx  qqbar.py  rational.pyx  residue_field.pyx
src/sage/rings/finite_rings/: Makefile.am  element_ext_pari.py  finite_field_prime_modn.py
src/sage/rings/function_field/: Makefile.am
src/sage/rings/number_field/: Makefile.am  number_field.py  number_field_element.pyx  number_field_element.pyxx  number_field_ideal.py  number_field_rel.py
src/sage/rings/padics/: Makefile.am
src/sage/rings/polynomial/: Makefile.am  polynomial_element.pyx  polynomial_quotient_ring.py  polynomial_rational_flint.pyxx
src/sage/rings/polynomial/padics/: Makefile.am
src/sage/rings/semirings/: Makefile.am
src/sage/rings/universal_cyclotomic_field/: Makefile.am
src/sage/sandpiles/: sandpile.py
src/sage/sat/solvers/: Makefile.am
src/sage/sat/solvers/cryptominisat/: Makefile.am
src/sage/schemes/: Makefile.am
src/sage/schemes/elliptic_curves/: Makefile.am  ec_database.py  ell_generic.py  ell_number_field.py  ell_rational_field.py  heegner.py  period_lattice.py
src/sage/schemes/hyperelliptic_curves/: Makefile.am
src/sage/schemes/plane_conics/: con_number_field.py
src/sage/schemes/projective/: Makefile.am
src/sage/schemes/toric/: Makefile.am
src/sage/server/: Makefile.am
src/sage/server/notebook/: Makefile.am
src/sage/sets/: Makefile.am
src/sage/stats/: Makefile.am
src/sage/stats/hmm/: Makefile.am
src/sage/structure/: Makefile.am  dynamic_class.py
src/sage/symbolic/: Makefile.am  constants.py
src/sage/symbolic/integration/: integral.py
src/sage/tests/: Makefile.am  cmdline.py  gap_packages.py
(+27 files in other folders)
