# this file is part of Sage
# (c) 2013 Felix Salfelder
# license: gplv3+
#
SUBDIRS = quatalg letterplace
include $(top_srcdir)/common.mk
inst_PYTHON = \
    affine_nil_temperley_lieb.py algebra_element.py algebra.py all.py \
    free_algebra_element.py free_algebra.py free_algebra_quotient_element.py \
    free_algebra_quotient.py group_algebra_new.py group_algebra.py __init__.py \
    iwahori_hecke_algebra.py nil_coxeter_algebra.py quaternion_algebra_element.py \
    quaternion_algebra.py shuffle_algebra.py \
    hall_algebra.py

algebras_steenroddir = $(instdir)/steenrod
algebras_steenrod_PYTHON = \
    steenrod/all.py \
    steenrod/__init__.py \
    steenrod/steenrod_algebra_bases.py \
    steenrod/steenrod_algebra_misc.py \
    steenrod/steenrod_algebra_mult.py \
    steenrod/steenrod_algebra.py

finitedir = $(instdir)/finite_dimensional_algebras
finite_PYTHON = \
    finite_dimensional_algebras/all.py \
    finite_dimensional_algebras/finite_dimensional_algebra_element.py \
    finite_dimensional_algebras/finite_dimensional_algebra_ideal.py \
    finite_dimensional_algebras/finite_dimensional_algebra_morphism.py \
    finite_dimensional_algebras/finite_dimensional_algebra.py \
    finite_dimensional_algebras/__init__.py
